<resources>
    <string name="app_name">TravelApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deals">DEALS</string>
    <string name="see_all"><u>See all</u></string>
    <string name="city_name">City name</string>
    <string name="city_name_label">Please type city name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_trip">Add Trip</string>
    <string name="cancel">Cancel</string>
    <string name="backbutton">backButton</string>
    <string name="like_button">like button</string>
    <string name="pin_icon">pin icon</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="might_need_these">MIGHT NEED THESE</string>
    <string name="guide">Guide</string>
    <string name="top_pick_articles">TOP-PICK ARTICLES</string>
    <string name="a_country_a_city_a_place_or_anything">A country, a city, a place... or anything</string>
    <string name="category_svg">category svg</string>
    <string name="bookmark_icon">Bookmark icon</string>
    <string name="home_banner">Home banner</string>
    <string name="where_s_your_nnext_destination">Where’s your\nnext destination?</string>
    <string name="home_button_background">home button background</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="nearby_attractions">NEARBY ATTRACTIONS</string>
    <string name="where_next">Where next?</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="no_travel_found">No Travel Found</string>
    <string name="Search_result">Search Result</string>
    <string name="back_icon">Back icon</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="_5_days_left">5 days left</string>
    <string name="_4_items">4 items</string>
    <string name="time_icon">time icon</string>
</resources>