<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.search_result.SearchResultFragment">

        <TextView
            android:id="@+id/search_result_fragment_h1"
            style="@style/fragment_tab_text"
            android:text="@string/Search_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/fragment_search_result_back_bg"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_result_fragment_h1" />

        <TextView
            android:id="@+id/search_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/search_result"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@+id/search_result_fragment_h1"
            app:layout_constraintTop_toBottomOf="@+id/search_result_fragment_h1" />

        <TextView
            android:id="@+id/no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_travel_found"
            android:textSize="@dimen/_22ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_recycler"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_470sdp"
            android:layout_marginHorizontal="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_9sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_query" />

        <ProgressBar
            android:id="@+id/feedProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>