<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="travelModel"
            type="com.empedocles.travelapp.domain.model.TravelModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.detail.DetailFragment">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/detail_fragment_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/detail_fragment_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/fragment_detail_back_icon"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/fragment_detail_ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_detail_h1"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/montserrat"
            android:text="@{travelModel.title}"
            android:textColor="#0A2753"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_fragment_banner" />


        <ImageButton
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/fragment_detail_like_button_radius"
            android:contentDescription="@string/like_button"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_fragment_banner" />

        <ImageView
            android:id="@+id/detail_fragment_pin_icon"
            android:layout_width="@dimen/_6sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:contentDescription="@string/pin_icon"
            android:src="@drawable/ic_pin"
            app:layout_constraintStart_toStartOf="@id/fragment_detail_h1"
            app:layout_constraintTop_toBottomOf="@id/fragment_detail_h1" />

        <TextView
            android:id="@+id/fragment_detail_h2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_light"
            android:text="@{travelModel.city}"
            android:textColor="#39414B"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/detail_fragment_pin_icon"
            app:layout_constraintTop_toBottomOf="@id/fragment_detail_h1" />

        <TextView
            android:id="@+id/fragment_detail_h3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_light"
            android:scrollbars="vertical"
            android:text="@{travelModel.description}"
            android:textColor="#39414B"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_detail_h2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBookMark"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_40ssp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/fragment_home_button"
            android:backgroundTint="@color/customSecondary"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/add_bookmark"
            android:textAllCaps="false"
            android:textColor="@color/customWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/feedProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong"
            android:textSize="@dimen/_22ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>